--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Sélectionner un utilisateur :</h2>
-    <form id="userForm" method="get" action="/LoadUser">
+    <form id="userForm" method="get" action="/user">
         <label for="user">Utilisateur :</label>
         <select id="user" name="user">
             {% for player_id, player_name in data %}
