--- a/templates/historique.html
+++ b/templates/historique.html
@@ -8,36 +8,21 @@
 </head>
 <body>
     <div><a href="/">RETOUR MENU</a></div>
-    <div id="graph"></div>
-
-    <script>
-        var data = {{ data | tojson }};
-
-        var elo = [];
-        var gamemodes = [];
-
-        data.forEach(function(item) {
-            elo.push(item[1]);
-            gamemodes.push(item[0]);
-        });
-
-        var trace = {
-            x: gamemodes,
-            y: elo,
-            type: 'bar'
-        };
-
-        var layout = {
-            title: 'Graphique MMR par mode de jeu',
-            xaxis: {
-                title: 'Mode de jeu'
-            },
-            yaxis: {
-                title: 'MMR'
-            }
-        };
-
-        Plotly.newPlot('graph', [trace], layout);
-    </script>
+    <div id="historique">
+        {% for h in historique %}
+        <div id="{{ h.id }}"  class="historique
+            {% if h.victory %}
+                win"> <h4>VICTOIRE</h4>
+            {% else %}
+                lose"> <h4>DEFAITE</h4>
+            {% endif %}
+            <h3 class="gamemode">{{ Gamemode(h.gamemode_id).str_value }}</h3>
+            <h3 class="elo">{{ h.mmr_won }}</h3>
+            {% if h.rage_quit %}
+                <h5 class="ragequit">Rage quit</h5>
+            {% endif %}
+        </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
