--- a/templates/user.html
+++ b/templates/user.html
@@ -21,7 +21,7 @@
           <tbody>
             {% for rank in ranks %}
             <tr>
-              <th scope="row">{{ rank.gamemode }}</th>
+              <th scope="row">{{ Gamemode(rank.gamemode_id).str_value }}</th>
               <td>{{ rank.mmr }}</td>
               <td>{{ rank.max_mmr }}</td>
             </tr>
@@ -32,7 +32,16 @@
 
     <div id="historique">
         <h3>Historique</h3>
-
+        {% for h in historique %}
+        <div id="{{ h.id }}"  class="historique">
+            {% if h.victory %}
+            <h4 class="win">VICTOIRE</h4>
+            {% else %}
+            <h4 class="lose">DEFAITE</h4>
+            {% endif %}
+            <h3 class="gamemode">{{ Gamemode(h.gamemode_id).str_value }}</h3>
+        </div>
+        {% endfor %}
     </div>
         
     <form id="gamemodeForm" method="get" action="/gamemode">
@@ -40,7 +49,7 @@
         <label for="gamemode">Graphique par mode de jeu :</label>
         <select id="gamemode" name="gamemode">
             {% for gamemode in gamemodes %}
-                <option value="{{ gamemode }}">{{ gamemode }}</option>
+                <option value="{{ gamemode_id }}">{{ Gamemode(gamemode_id).str_value }}</option>
             {% endfor %}
         </select>
         <br><br>
