--- a/templates/user.html
+++ b/templates/user.html
@@ -5,9 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Utilisateurs</title>
 </head>
+<style>
+    .win{
+        color:green
+        
+    }
+    .lose{
+        color: red
+    }
+    .historique{
+        
+        margin-bottom: 12px;
+    }
+    #account_name{
+        text-align: center;
+    }
+   
+    #summary{
+        border: solid blue;
+    }
+    #graph{
+        border: solid blue;
+    }
+    #historique{
+        border: solid blue;
+    }
+</style>
 <body>
-    <h2>Compte {{ player.player_name }}</h2>
-
+    {% if  previous_url %}
+    <a href="{{ previous_url }}">RETOUR</a>
+    {% endif %}
+    <h2 id="account_name">Compte {{ player.player_name }}</h2>
     <div id="summary">
         <h3>Elo actuellement</h3>
         <table>
@@ -29,32 +57,39 @@
           </tbody>
         </table>
     </div>
+    <div id="graph">
+        <form id="gamemodeForm" method="get" action="/graph_gamemode">
+            <input id="user" name="id" type="password" value="{{ player.player_id }}" hidden>
+            <label for="gamemode">Graphique par mode de jeu :</label>
+            <select id="gamemode" name="gamemode">
+                {% for gamemode_id in gamemode_ids %}
+                    <option value="{{ gamemode_id }}">{{ Gamemode(gamemode_id).str_value }}</option>
+                {% endfor %}
+            </select>
+            <br><br>
+            <button type="submit">Charger</button>
+        </form>
+    </div>
+    
+
 
     <div id="historique">
-        <h3>Historique</h3>
+        <h3>Historique</h3><span><a href="/historique?id={{ player.player_id }}">(plus)</a></span>
         {% for h in historique %}
         <div id="{{ h.id }}"  class="historique">
             {% if h.victory %}
-            <h4 class="win">VICTOIRE</h4>
+            <span class="win">VICTOIRE</span>
             {% else %}
-            <h4 class="lose">DEFAITE</h4>
+            <span class="lose">DEFAITE</span>
             {% endif %}
-            <h3 class="gamemode">{{ Gamemode(h.gamemode_id).str_value }}</h3>
+            <span class="gamemode">{{ Gamemode(h.gamemode_id).str_value }}</span>
+            <span class="timestamp">{{ datetime.datetime.fromtimestamp(h.timestamp) }}</span>
         </div>
         {% endfor %}
     </div>
+    
         
-    <form id="gamemodeForm" method="get" action="/gamemode">
-        <input id="user" name="user" type="tex" value="{{ player.player_id }}" hidden>
-        <label for="gamemode">Graphique par mode de jeu :</label>
-        <select id="gamemode" name="gamemode">
-            {% for gamemode in gamemodes %}
-                <option value="{{ gamemode_id }}">{{ Gamemode(gamemode_id).str_value }}</option>
-            {% endfor %}
-        </select>
-        <br><br>
-        <button type="submit">Charger</button>
-    </form>
+    
 
     
 </body>
