--- a/templates/base.html
+++ b/templates/base.html
@@ -10,20 +10,11 @@
 
 </head>
 <body>
-    <h1 id="big_title">RocketMax</h1>
+    <h1 id="big_title"><a href="/" >RocketMax</a></h1>
     <div class="content">
         {% block content %} {% endblock %}
     </div>
-    <div class="historique">
-    {% block historique %} {% endblock %}
-</div>
-
-<div class="graph">
-    {% block graph %} {% endblock %}
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
+
 </html>
