--- a/templates/erreur.html
+++ b/templates/erreur.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Utilisateurs</title>
-</head>
-<body>
-    <h1>Erreur Serveur</h1>
-    <div class="error">
-        {{ error }}
-    </div>
-    
+{% extends 'base.html' %}
 
-    
-</body>
-</html>
+{% block content %}
+<div class="error">
+        {{ error }}
+</div>
+{% endblock %}
