--- a/templates/graph.html
+++ b/templates/graph.html
@@ -13,36 +13,31 @@
     <div id="graph"></div>
 
     <script>
-       // Données factices pour l'exemple
-       
-
-        var timestamps = {{ object_mmr.i_array | safe }};
+        var x_value = {{ object_mmr.i_array | safe }};
         var elo_values = {{ object_mmr.mmr_array | safe }};
 
-       
-
         var trace = {
-            x: timestamps,
+            x: x_value,
             y: elo_values,
+            name: 'Courbe du MMR',
             type: 'scatter',
             mode: 'lines+markers',
-            name: 'MMR',
             text: {{ object_mmr.date_array | safe }},
-            line: {shape: 'spline'},
-        };
-        {% if object_mmr_today.mmr_array %}
-        var timestamps_today = {{ object_mmr_today.i_array | safe }};
-        var elo_values_today = {{ object_mmr_today.mmr_array | safe }};
-
-        var trace_today = {
-            x: timestamps_today,
-            y: elo_values_today,
-            type: 'scatter',
-            mode: 'lines+markers',
-            name: 'MMR',
-            text: {{ object_mmr_today.date_array | safe }},
             line: {shape: 'spline'}
         };
+        {% if object_mmr_today.mmr_array %}
+            var x_value_today = {{ object_mmr_today.i_array | safe }};
+            var elo_values_today = {{ object_mmr_today.mmr_array | safe }};
+
+            var trace_today = {
+                x: x_value_today,
+                y: elo_values_today,
+                name: 'ces dernières 24h',
+                type: 'scatter',
+                mode: 'lines+markers',
+                text: {{ object_mmr_today.date_array | safe }},
+                line: {shape: 'spline'}
+            };
         {% endif %}
         
 
@@ -53,12 +48,7 @@
             },
             yaxis: {
                 title: 'MMR'
-            },margin: {
-                autoexpand: false,
-                l: 100,
-                r: 20,
-                t: 100
-            },
+            }
         };
 
         Plotly.newPlot('graph', [trace{% if object_mmr_today.mmr_array %},trace_today{% endif %}], layout);
